syntax = "proto3";

package ai.metathings.service.identityd2;

import "validate/validate.proto";

import "model.proto";

message ListGroupsForObjectRequest {
	OpEntity object = 1 [(validate.rules).message.required = true];
}

message ListGroupsForObjectResponse {
	repeated Group groups = 1;
}
